Fix visibility on mobile :bug:

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   font-family: 'Courier New', sans-serif;
   background-color: #1d1b00;
   color: #ccc;
-  font-size: 18px;
+  font-size: 15px;
   line-height: 1.6;
 }
 
